k8/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: production
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-container
        image: rdicidr-fsl:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
